# expected-score-model

./: .gitignore  Build.sh  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt  score_xScore.py
expected_score_model/: config.py
expected_score_model/domain/contracts/: modelling_data_contract.py
expected_score_model/domain/modelling/: hyperparameter_tuning.py  model_evaluation.py  optuna_xgb_param_grid.py  supermodel.py
expected_score_model/domain/preprocessing/: chain_vision_exploration.R  data_preprocessor.py
notebooks/: chain_exploration.ipynb  data_preparation.ipynb  expected_scores.ipynb  standardise_venues.ipynb
notebooks/_analysis/: shot_expected_scores.ipynb  team_expected_scores.ipynb
notebooks/_analysis/match/: simulations.ipynb
notebooks/_analysis/players/: highest_player_xs.ipynb  over_and_underperformance.ipynb
notebooks/_analysis/teams/: highest_team_xscore.ipynb  home_away_bias.ipynb  rolling_xscore.ipynb
notebooks/_modelling/catboost/: evaluation.ipynb  predict.ipynb  train_catboost.py
notebooks/_modelling/glm/: logistic_regression.ipynb
notebooks/expected_score/: expected_score_visualisation.py  expected_scores.ipynb  vertical_expected_score_distribution.ipynb
notebooks/open_shots/: eda_open_shots.ipynb
notebooks/set_shots/: eda_set_shots.ipynb
notebooks/xScore_vis/: diamond_scatter_plot.ipynb  team_rolling_averages.ipynb  vertical_expected_shot_map.ipynb
src/expected_score_model/: config.py  predict.py  predict_expected_score.py
tests/: test_predict_open_shots.py  test_predict_set_shots.py
(+59 files in other folders)
