[project]
name = "expected_score_model"
description = "Building and analysing an expected score model."
readme = "README.md"
license = {file = "LICENSE"}
version = "0.2.0"
authors = [
    { name = "Ciaran Grant", email = "ciaran.grant@hotmail.co.uk" }
]
requires-python = ">=3.11"

dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
"Repository" = "https://github.com/ciaran-grant/expected-score-model"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"expected_score_model" = ["fonts/*.ttf"]